RESOLVED FIXED 280696
Do not ignore caption's minimum width when computing table preferred size
https://bugs.webkit.org/show_bug.cgi?id=280696
Summary Do not ignore caption's minimum width when computing table preferred size
alan
Reported 2024-10-01 11:54:34 PDT
Attachments
Patch (2.79 KB, patch)
2024-10-01 11:55 PDT, alan
no flags
Patch (2.58 KB, patch)
2024-10-01 14:18 PDT, alan
no flags
[fast-cq]Patch (2.58 KB, patch)
2024-10-01 17:04 PDT, alan
no flags
alan
Comment 1 2024-10-01 11:55:18 PDT
alan
Comment 2 2024-10-01 14:18:01 PDT
alan
Comment 3 2024-10-01 17:04:31 PDT
Created attachment 472759 [details] [fast-cq]Patch
EWS
Comment 4 2024-10-01 17:09:01 PDT
Committed 284529@main (a2e02f963910): <https://commits.webkit.org/284529@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472759 [details].
Radar WebKit Bug Importer
Comment 5 2024-10-01 17:10:15 PDT
Note You need to log in before you can comment on or make changes to this bug.