Do not ignore caption's minimum width when computing table preferred size https://bugs.webkit.org/show_bug.cgi?id=280696 <rdar://135587396>

Reviewed by Antti Koivisto.

* LayoutTests/fast/table/table-with-caption-assert-in-min-max-expected.txt: Added.
* LayoutTests/fast/table/table-with-caption-assert-in-min-max.html: Added.
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::computePreferredLogicalWidths):

Canonical link: https://commits.webkit.org/284529@main